Updated project images

--- a/index.html
+++ b/index.html
@@ -154,17 +154,43 @@
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/skylight-backend">GitHub</a></h5>
                                         </li>
                                         <li class="project-info">
-                                            <img class="icon major style3 fa-copy ss-clone" src="./images/SCC.png" style="cursor: pointer;"/>
-                                            <h3><a href="https://soundcloud-project.onrender.com/" title="SoundCloud Clone Live Site">SoundCloud Clone</a></h3>
+                                            <img class="icon major style3 fa-copy api-project job-board-api" src="./images/software_development.jpg" style="cursor: pointer;"/>
+                                            <h3><a href="https://github.com/dayjyun/job-board-api" title="SoundCloud Clone Live Site">Job Board API</a></h3>
                                             <script>
                                                 document.querySelector('.ss-clone').addEventListener('click', () => {
-                                                    document.location.href = 'https://soundcloud-project.onrender.com/'
+                                                    document.location.href = 'https://github.com/dayjyun/job-board-api'
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
                                                 <p>SoundCloud Clone was developed from my connection with music. The application is designed for musicians to upload their recordings. Like Stack Spill, it consists of JavaScript, Express.js, and SQL in the backend, and React-Redux in the frontend while using AWS to store images and audio.</p>
                                             </div>
-                                            <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/SoundCloud-Project">GitHub</a></h5>
+                                            <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/job-board-api">GitHub</a></h5>
+                                        </li>
+                                        <li class="project-info">
+                                            <img class="icon major style3 fa-copy api-project outer-space-api" src="./images/software_development.jpg" style="cursor: pointer;"/>
+                                            <h3><a href="https://github.com/dayjyun/outer-space-api" title="SoundCloud Clone Live Site">Outer Space API</a></h3>
+                                            <script>
+                                                document.querySelector('.ss-clone').addEventListener('click', () => {
+                                                    document.location.href = 'https://github.com/dayjyun/outer-space-api'
+                                                })
+                                            </script>
+                                            <div class="paragraph-desc">
+                                                <p>SoundCloud Clone was developed from my connection with music. The application is designed for musicians to upload their recordings. Like Stack Spill, it consists of JavaScript, Express.js, and SQL in the backend, and React-Redux in the frontend while using AWS to store images and audio.</p>
+                                            </div>
+                                            <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/outer-space-api">GitHub</a></h5>
+                                        </li>
+                                        <li class="project-info">
+                                            <img class="icon major style3 fa-copy api-project rock-paper-scissors" src="./images/software_development.jpg" style="cursor: pointer;"/>
+                                            <h3><a href="https://github.com/dayjyun/rps-project-java" title="SoundCloud Clone Live Site">Rock Paper Scissors</a></h3>
+                                            <script>
+                                                document.querySelector('.ss-clone').addEventListener('click', () => {
+                                                    document.location.href = 'https://github.com/dayjyun/rps-project-java'
+                                                })
+                                            </script>
+                                            <div class="paragraph-desc">
+                                                <p>SoundCloud Clone was developed from my connection with music. The application is designed for musicians to upload their recordings. Like Stack Spill, it consists of JavaScript, Express.js, and SQL in the backend, and React-Redux in the frontend while using AWS to store images and audio.</p>
+                                            </div>
+                                            <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/rps-project-java">GitHub</a></h5>
                                         </li>
 
                                     </ul>
@@ -173,7 +199,7 @@
                                     <h2>App Academy</h2>
                                     <ul class="features">
                                         <li class="project-info">
-                                            <img class="icon major style3 fa-copy stack-spill" src="./images/SS.png" style="cursor: pointer;"/>
+                                            <img class="icon major style3 fa-copy full-stack-project stack-spill" src="./images/stack-spill.png" style="cursor: pointer;"/>
                                             <h3><a href="https://stack-spill.herokuapp.com/" title="Stack Spill Live Site">Stack Spill</a></h3>
                                             <script>
                                                 document.querySelector('.stack-spill').addEventListener('click', () => {
@@ -186,7 +212,7 @@
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/stack-spill-project">GitHub</a></h5>
                                         </li>
                                         <li class="project-info">
-                                            <img class="icon major style3 fa-copy instapix" src="./images/IP.png" style="cursor: pointer;"/>
+                                            <img class="icon major style3 fa-copy full-stack-project instapix" src="./images/instapix.png" style="cursor: pointer;"/>
                                             <h3><a href="https://instapix.onrender.com" title="Instapix Live Site">Instapix</a></h3>
                                             <script>
                                                 document.querySelector('.instapix').addEventListener('click', () => {
@@ -199,7 +225,7 @@
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/instapix-project">GitHub</a></h5>
                                         </li>
                                         <li class="project-info">
-                                            <img class="icon major style3 fa-copy ss-clone" src="./images/SCC.png" style="cursor: pointer;"/>
+                                            <img class="icon major style3 fa-copy full-stack-project ss-clone" src="./images/sound-cloud-clone.png" style="cursor: pointer;"/>
                                             <h3><a href="https://soundcloud-project.onrender.com/" title="SoundCloud Clone Live Site">SoundCloud Clone</a></h3>
                                             <script>
                                                 document.querySelector('.ss-clone').addEventListener('click', () => {
