Updated App Academy project descriptions

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
-                                                <p>My version of Stack Overflow. I chose this site because it resembles my time at my previous job querying for solutions. It consists of JavaScript, Express.js, and SQL in the backend, with React-Redux in the frontend. I utilized AWS to store uploaded profile images from users.</p>
+                                                <p>Based on my previous job experience where I frequently sought solutions, I created a personalized version of Stack Overflow. With JavaScript, Express.js, and SQL powering the backend, and React-Redux driving the frontend, users can access a familiar interface. To enhance user profiles, I integrated AWS for secure storage of uploaded profile images.</p>
                                             </div>
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/stack-spill-project">GitHub</a></h5>
                                         </li>
@@ -220,7 +220,7 @@
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
-                                                <p>Instapix was created because social media is highly influential in connecting with others. It is an Instagram clone built with Python, Flask, and SQLAlchemy to model the backend with React-Redux in the frontend. Integrating Alembic for database migration and Docker for deployment.</p>
+                                                <p>Instapix was inspired by the powerful impact of social media in fostering connections. It is a Python-based Instagram clone, leveraging Flask and SQLAlchemy for the backend, and React-Redux for the frontend. Database migration is seamlessly handled using Alembic, while Docker ensures smooth deployment of the application.</p>
                                             </div>
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/instapix-project">GitHub</a></h5>
                                         </li>
@@ -233,7 +233,7 @@
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
-                                                <p>SoundCloud Clone was developed from my connection with music. The application is designed for musicians to upload their recordings. Like Stack Spill, it consists of JavaScript, Express.js, and SQL in the backend, and React-Redux in the frontend while using AWS to store images and audio.</p>
+                                                <p>With my deep connection to music, I developed SoundCloud Clone — an application designed for musicians to effortlessly upload their recordings. Its backend utilizes JavaScript, Express.js, and SQL, while the frontend is powered by React-Redux. To ensure seamless storage of images and audio, AWS services are integrated.</p>
                                             </div>
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/SoundCloud-Project">GitHub</a></h5>
                                         </li>
