--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
-                                                <p>My version of Stack Overflow. I chose this site because it resembles my time at my previous job querying for solutions. It consists of JavaScript, Express.js, and SQL in the backend, with React-Redux in the frontend. I utilized AWS to store uploaded profile images from users.</p>
+                                                <p>SkyLight is a fly-share website that caters to the needs of aviation enthusiasts. Powered by AngularJs and TypeScript, users can manage their personalized profiles to track booked flights, explore airport information, and submit requests to become a pilot. With Google Maps integration, users can visualize real-time airport locations.</p>
                                             </div>
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/skylight-frontend">GitHub</a></h5>
                                         </li>
@@ -149,7 +149,7 @@
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
-                                                <p>My version of Stack Overflow. I chose this site because it resembles my time at my previous job querying for solutions. It consists of JavaScript, Express.js, and SQL in the backend, with React-Redux in the frontend. I utilized AWS to store uploaded profile images from users.</p>
+                                                <p>SkyLight's backend API. The API leverages the power of Java 17, Spring Boot, and the H2 Database to provide a robust and efficient platform. The integration of the Cucumber Testing framework enables Behavior-Driven Development (BDD) with Gherkin syntax, ensuring high-quality and reliable code.</p>
                                             </div>
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/skylight-backend">GitHub</a></h5>
                                         </li>
@@ -162,7 +162,7 @@
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
-                                                <p>SoundCloud Clone was developed from my connection with music. The application is designed for musicians to upload their recordings. Like Stack Spill, it consists of JavaScript, Express.js, and SQL in the backend, and React-Redux in the frontend while using AWS to store images and audio.</p>
+                                                <p>The Job Board API transforms the job search and recruitment experience by providing seamless browsing, application submission, and management of listings. Businesses can effortlessly post jobs, review applicants, and streamline hiring. Developed with Java 17 and Spring Boot, it ensures stability and performance.</p>
                                             </div>
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/job-board-api">GitHub</a></h5>
                                         </li>
@@ -175,7 +175,7 @@
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
-                                                <p>SoundCloud Clone was developed from my connection with music. The application is designed for musicians to upload their recordings. Like Stack Spill, it consists of JavaScript, Express.js, and SQL in the backend, and React-Redux in the frontend while using AWS to store images and audio.</p>
+                                                <p>As much as we look up at the skies, we can look forward and bring the skies to us. The Outer Space API is designed to have users record Solar Systems and Planets into a PostgreSQL database using Java 17, Spring Boot 2.7.8, and JWT for security and authentication.</p>
                                             </div>
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/outer-space-api">GitHub</a></h5>
                                         </li>
@@ -188,7 +188,7 @@
                                                 })
                                             </script>
                                             <div class="paragraph-desc">
-                                                <p>SoundCloud Clone was developed from my connection with music. The application is designed for musicians to upload their recordings. Like Stack Spill, it consists of JavaScript, Express.js, and SQL in the backend, and React-Redux in the frontend while using AWS to store images and audio.</p>
+                                                <p>A Java-based project that brings the classic game of Rock, Paper, Scissors to life directly to the terminal. My first project working with Java, this command line application offers an engaging and interactive experience for players to enjoy against a computer or another player.</p>
                                             </div>
                                             <h5 class="bottom-link-github">More on <a href="https://github.com/dayjyun/rps-project-java">GitHub</a></h5>
                                         </li>
@@ -239,6 +239,7 @@
                                         </li>
                                     </ul>
                                 </section>
+                                <h3 >Feel free to explore my other projects on <a href="https://github.com/dayjyun/dayjyun.github.io">GitHub</a>!</h3>
                             </section>
 					</div>
 
