--- a/about-me.html
+++ b/about-me.html
@@ -28,7 +28,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="./images/20221023_001051.gif" alt="piano" /></span>
+								<span class="image main"><img src="./images/about-me-header_piano.gif" alt="piano" /></span>
 								<h2>Personal Story</h2>
 								<p>
 									Hello! <br> <p style="text-indent: 4em;">My name is Kevin Barrios. I am a full-stack software engineer with a drive and eagerness for web development. I enjoy learning ways to make code work more efficiently, finding patterns, and connecting it all together to form a powerful creation.</p>
