Updated resume link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1>Kevin Barrios</h1>
-						<p>Full-Stack Software Engineer from Chicago</p>
+						<p>Full-Stack Software Engineer</p>
 					</header>
 
 				<!-- Nav -->
@@ -44,14 +44,11 @@
                                         <h2>About Me</h2>
                                     </header>
                                     <p>
-                                        With the heart of an artist and the mind of an engineer, creativity and structure design an emergence of passion, dedication, and curiosity; merging to create perfect symmetry for an unparalleled and genuine personality.
+                                        Hi! I'm Kevin Barrios, a full-stack software engineer who loves building websites. I specialize in JavaScript and Java and have experience working with popular frontend tools like Angular and React, as well as backend frameworks such as Spring Boot and Express. Beyond coding, I have a background in music, where I honed skills like teamwork and discipline, and I also have experience in the banking industry, developing leadership and problem-solving abilities.
                                     </p>
                                     <p>
-                                        My goal is to find the best solutions to any problem, striving for efficiency and measurable results while maintaining simplicity and thoroughness. I approach challenges with a positive and welcoming mindset, always eager to learn something new in the process.
+                                        My passion for technology led me to pursue web development, where I successfully completed comprehensive software engineering programs at General Assembly and App Academy. Throughout my journey, I have built numerous full-stack applications and I am enthusiastic about continuously expanding my skills. I am excited about the future of technology and would love to connect with you. Feel free to contact me and explore my other projects!
                                     </p>
-                                    <ul class="actions">
-                                        <li><a href="about-me.html" class="button">My Story</a></li>
-                                    </ul>
                                 </div>
                                 <span class="image"><img src="images/pfp_02.png" alt="" /></span>
                             </div>
@@ -261,7 +258,7 @@
                                     <dd><a href="tel:+7734120574">(773) 412-0574</a></dd>
                                     <dt>Email</dt>
                                     <dd><a href="mailto:kbarriosdev@gmail.com">kbarriosdev@gmail.com</a></dd>
-                                    <dt><a href="https://drive.google.com/file/d/1IXlt7fGdaNcqaxty5YeuZhb13suBFGJr/view?usp=sharing" title="Resume Link">Resume</a></dt>
+                                    <dt><a href="https://drive.google.com/file/d/1Mo7NMlVFiM_IZSJkrAsqfdtxXrVX4emZ/view?usp=sharing" title="Resume Link">Resume</a></dt>
                             </dl>
                                     <h2 class="links-footer">Follow For More</h2>
                                     <ul class="icons">
